<resources>
    <string name="app_name">DevTiles</string>
    <string name="app_title">Developer Tiles</string>

    <string name="open_play_store">Open Play Store</string>
    <string name="okay">OK</string>
    <string name="close">Close</string>

    <string name="header_rootless_tiles">Non-root tiles</string>
    <string name="header_sys_prop_tiles">System-prop tiles</string>
    <string name="header_root_tiles">Root-required tiles</string>
    <string name="header_magic_required_tiles">Magic-required tiles</string>
    <string name="header_unavailable_tiles">Unavailable</string>

    <string name="header_rootless_tiles_tip">These tiles don\'t require any special permissions, can run on all devices</string>
    <string name="header_sys_prop_tiles_tip">You\'re so lucky to have these tiles compatible, otherwise they need root permission to work</string>
    <string name="header_root_tiles_tip">These tiles require superuser permission to work correctly</string>
    <string name="header_magic_required_tiles_tip">These tiles require special permission to write secure settings</string>
    <string name="header_unavailable_tiles_tip">These tiles are currently not compatible with your device. Consider re-run permission wizard or grant superuser permission.</string>

    <string name="tile_demo_mode">Demo mode</string>
    <string name="tile_debug_gpu_overdraw">Debug GPU overdraw</string>
    <string name="tile_show_layout_bounds">Show layout bounds</string>
    <string name="tile_force_rtl_layout">Force RTL layout direction</string>
    <string name="tile_profile_gpu_rendering">Profile GPU rendering</string>
    <string name="tile_adb_over_network">ADB over network</string>
    <string name="tile_caffeine">Caffeine</string>
    <string name="tile_show_taps">Show taps</string>
    <string name="tile_animator_duration">Animator duration scale</string>
    <string name="tile_strict_mode">Strict mode</string>
    <string name="tile_strict_mode_enabled">Strict mode enabled</string>
    <string name="tile_strict_mode_disabled">Strict mode disabled</string>
    <string name="tile_usb_debugging">USB debugging</string>

    <string name="tile_demo_mode_desc">Clean up the status bar for those perfect screenshots</string>
    <string name="tile_debug_gpu_overdraw_desc">See when and where an app asking system to draw something on top of something else</string>
    <string name="tile_show_layout_bounds_desc">Show Layout Bounds to show your app\'s clip bounds, margins, and other user interface constructions on the device</string>
    <string name="tile_force_rtl_layout_desc">Forces screen layout direction to be from right to left (RTL) or from left to right (default)</string>
    <string name="tile_profile_gpu_rendering_desc">Display a graph showing visual rendering of how hard the GPU is working</string>
    <string name="tile_adb_over_network_desc">Connect your device to ADB wirelessly (without the need for USB cable)</string>
    <string name="tile_caffeine_desc">Caffeine tile prevent device from going to sleep for a period of time</string>
    <string name="tile_show_taps_desc">Show a touch point when you touch the screen, ideal for demos</string>
    <string name="tile_animator_duration_desc">Change the default animator playback speed to easily debug animation</string>
    <string name="tile_strict_mode_desc">StrictMode flashes the screen when an app uses the main thread to perform long, intensive operations</string>
    <string name="tile_usb_debugging_desc">Communicate with your development machine through Android Debug Bridge (adb)</string>

    <string name="toast_permission_required">Please grant permission!</string>

    <string name="title_refresh">Refresh</string>
    <string name="title_run_permission_wizard">Run permission wizard</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>

    <string name="title_getting_started">Getting Started</string>
    <string name="title_install_from_play_store">Install from Play Store</string>
    <string name="title_grant_permission">Grant Permission</string>
    <string name="title_continue">Continue</string>
    <string name="title_skip"><u>Skip</u></string>
    <string name="title_got_it">Got it</string>
    <string name="title_rate_us">Rate us</string>
    <string name="title_finish">Finish setup</string>

    <string name="title_welcome">Welcome to DevTiles</string>
    <string name="title_getting_set_up">Getting set up is super easy.</string>
    <string name="title_install_dependency">Please install this plugin:\n<i>Devetter</i></string>
    <string name="title_devetter_details">This is required for some tiles to work</string>
    <string name="title_devetter_installed">Devetter Plugin is installed!</string>
    <string name="title_devetter_continue">Follow the next step to give Devetter magic permissions</string>
    <string name="title_grant_su">Please grant SU permission in order to gather \"magic\" permissions</string>
    <string name="title_grant_su_details">Some QS tiles (like Demo mode) require these permissions to work</string>
    <string name="title_set_up_done">Everything\'s ready!\nLet\'s go to the main dashboard :D</string>
    <string name="title_go_rate_us">And don\'t forget to give us 5★</string>
    <string name="title_su_requesting">Requesting superuser permission…</string>
    <string name="title_magic_gathering">Gathering \"magic\" permissions…</string>
    <string name="title_processing">Processing</string>
    <string name="title_get_su_failed">Get superuser permission failed!</string>
    <string name="title_check_again">Don\'t be worried to tap Skip\nMost of the tiles will work perfectly without these permissions</string>
    <string name="title_get_permission_success">Get permissions successfully!</string>
    <string name="title_follow_next_step">Click Continue and add some tiles to your quick settings panel</string>

    <string name="title_github_repository">GitHub Repository</string>
    <string name="title_github_sub">Please tap here and create an issue on this repo if you got into some trouble. Thank you!</string>
    <string name="title_rate_this_app">Rate this app.</string>
    <string name="title_version">Version %s</string>
    <string name="title_changelog">Changlog</string>

    <string name="pref_key_last_version_code" translatable="false">last_version_code</string>
    <string name="pref_key_is_devetter_installed" translatable="false">is_devetter_installed</string>
    <string name="pref_key_compatible_mode" translatable="false">compatible_mode</string>
    <string name="pref_key_su_granted" translatable="false">su_granted</string>
    <string name="pref_key_magic_granted" translatable="false">magic_granted</string>
    <string name="pref_key_is_first_launch" translatable="false">is_first_launch</string>
</resources>
